src/test/deca/syntax/invalid/specialCharPrintln.deca
// Description :
// test du print sur les char spéciaux
// Resultat :
// To
// to 
// To\to To"to
// 

{
    println("To\nto ") ;
    println("To\\to To\"to") ;
}
